ChangeLog for Gammu project <http://www.gammu.org/>
===================================================

Description
===========

In brackets names of people, who told about error/problem or helped in fixing
or inspired me to make it.

[!] Important change
[+] New functionality
[*] Changes in existing functionality
[-] Fixed error

ChangeLog
=========
    
2008???? - 1.21.92
    
20081111 - 1.21.91

[+] * Script gammu-config can now also work with whiptail.
[-] * Minor fixes in gammu-config script.
[-] * Extra spaces from connection or device name are now stripped.
[-] * Automatically reinitialize FBUS connection if it is dropped.
[-] * Disable OBEX with Motorola Z6c, it is broken (bug #746).
[-] * Refresh manufacturer information on second init of AT (bug #746).
[-] * Always get charset information on AT phone initialization.
[-] * Better handling of OBEX switching for Siemens phones.
[-] * Fix flags for 2630 and 3109c (bug #752).
[-] * Fix handling of caller groups and picture IDs (bug #752).
[-] * Properly set calendar location while adding (bug #747).
    
20081020 - 1.21.90

[-] * Sign Windows binaries during build.
[-] * Detect long FM station names (bug #727).
[-] * Add ID for Nokia 2630b.
[-] * Handle properly very long lines in vcards (bug #728).
[-] * Do not build and install locales if gettext is not compiled.
[-] * Increase number of calendar entries (bug #725).
[-] * Leak free test runs.
[+] * Support backup of phone phonebook from Siemens (bug #732).
[+] * Properly handle GetNextMemory on Siemens (bug #732).
[+] * Save textual category to backup (bug #737).
[+] * Enable dashboard testing using CTest/CDash.
[+] * Add option to do coverage analysis.
[-] * Properly handle debug file closing.
[-] * Add test case for debug logging.
[-] * Fix decoding of some SMS messages from Nokia phones (bug #735).
[-] * Hack for (still) unknown error code (bug #733).
    
20081003 - 1.21.0
    
[-] * Handle properly empty SMSC (bug #722).