@@ -411,6 +411,8 @@ else(MSVC)
         MACRO_TUNE_COMPILER("-Wextra")
         # Just silent this for now, too much code to fix here
         MACRO_TUNE_COMPILER("-Wno-unused-parameter")
+        # Not sure if this is safe for all architectures
+        MACRO_TUNE_COMPILER("-fstrict-aliasing")
     endif (DEBUG)
 
     #
